--- a/package.json
+++ b/package.json
@@ -1,76 +1,81 @@
 {
-	"name": "file-template-manager",
-	"displayName": "file-template-manager",
-	"description": "File template management",
-	"version": "0.0.1",
-	"engines": {
-		"vscode": "^1.49.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"*"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "file-template-manager.createNewFileFromTemplate",
-				"title": "New file from template"
-			},
-			{
-				"command": "file-template-manager.createNewFileTemplate",
-				"title": "[Templates] Create a new file template"
-			},
-			{
-				"command": "file-template-manager.editFileTemplate",
-				"title": "[Templates] Edit a file template"
-			},
-			{
-				"command": "file-template-manager.removeFileTemplate",
-				"title": "[Templates] Remove a file template"
-			}
-		],
-		"menus": {
-			"explorer/context": [
-				{
-					"when": "explorerResourceIsFolder",
-					"command": "file-template-manager.createNewFileFromTemplate",
-					"group": "navigation@4"
-				}
-			],
-			"commandPalette": [
-				{
-					"command": "file-template-manager.createNewFileFromTemplate",
-					"when": "never"
-				}
-			]
-		}
-	},
-	"scripts": {
-		"vscode:prepublish": "yarn run compile",
-		"compile": "tsc -p ./",
-		"lint": "eslint src --ext ts",
-		"watch": "tsc -watch -p ./",
-		"pretest": "yarn run compile && yarn run lint",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/ejs": "^3.0.4",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.0.0",
-		"@types/node": "^14.0.27",
-		"@types/vscode": "^1.49.0",
-		"@typescript-eslint/eslint-plugin": "^3.8.0",
-		"@typescript-eslint/parser": "^3.8.0",
-		"eslint": "^7.6.0",
-		"glob": "^7.1.6",
-		"mocha": "^8.1.3",
-		"typescript": "^4.0.2",
-		"vscode-test": "^1.4.0"
-	},
-	"dependencies": {
-		"ejs": "^3.1.5"
-	}
+  "name": "file-template-manager",
+  "displayName": "file-template-manager",
+  "description": "File template management",
+  "version": "0.0.1",
+  "homepage": "https://github.com/gautier-lefebvre/vscode-file-template-manager#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gautier-lefebvre/vscode-file-template-manager.git"
+  },
+  "engines": {
+    "vscode": "^1.49.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "*"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "file-template-manager.createNewFileFromTemplate",
+        "title": "New file from template"
+      },
+      {
+        "command": "file-template-manager.createNewFileTemplate",
+        "title": "[Templates] Create a new file template"
+      },
+      {
+        "command": "file-template-manager.editFileTemplate",
+        "title": "[Templates] Edit a file template"
+      },
+      {
+        "command": "file-template-manager.removeFileTemplate",
+        "title": "[Templates] Remove a file template"
+      }
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "when": "explorerResourceIsFolder",
+          "command": "file-template-manager.createNewFileFromTemplate",
+          "group": "navigation@4"
+        }
+      ],
+      "commandPalette": [
+        {
+          "command": "file-template-manager.createNewFileFromTemplate",
+          "when": "never"
+        }
+      ]
+    }
+  },
+  "scripts": {
+    "vscode:prepublish": "yarn run compile",
+    "compile": "tsc -p ./",
+    "lint": "eslint src --ext ts",
+    "watch": "tsc -watch -p ./",
+    "pretest": "yarn run compile && yarn run lint",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/ejs": "^3.0.4",
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.0.0",
+    "@types/node": "^14.0.27",
+    "@types/vscode": "^1.49.0",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
+    "glob": "^7.1.6",
+    "mocha": "^8.1.3",
+    "typescript": "^4.0.2",
+    "vscode-test": "^1.4.0"
+  },
+  "dependencies": {
+    "ejs": "^3.1.5"
+  }
 }
