--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
         "title": "New file from template"
       },
       {
+        "command": "file-template-manager.createNewFilesFromTemplateGroup",
+        "title": "New files from template group"
+      },
+      {
         "command": "file-template-manager.createNewFileTemplate",
         "title": "[TEMPLATES] Create a new file template"
       },
@@ -35,6 +39,18 @@
       {
         "command": "file-template-manager.removeFileTemplate",
         "title": "[TEMPLATES] Remove a file template"
+      },
+      {
+        "command": "file-template-manager.createNewTemplateGroup",
+        "title": "[TEMPLATES] Create a new template group"
+      },
+      {
+        "command": "file-template-manager.editTemplateGroup",
+        "title": "[TEMPLATES] Edit a template group"
+      },
+      {
+        "command": "file-template-manager.removeTemplateGroup",
+        "title": "[TEMPLATES] Remove a template group"
       }
     ],
     "menus": {
@@ -43,11 +59,20 @@
           "when": "explorerResourceIsFolder",
           "command": "file-template-manager.createNewFileFromTemplate",
           "group": "navigation@4"
+        },
+        {
+          "when": "explorerResourceIsFolder",
+          "command": "file-template-manager.createNewFilesFromTemplateGroup",
+          "group": "navigation@5"
         }
       ],
       "commandPalette": [
         {
           "command": "file-template-manager.createNewFileFromTemplate",
+          "when": "never"
+        },
+        {
+          "command": "file-template-manager.createNewFilesFromTemplateGroup",
           "when": "never"
         }
       ]
