chore: set version to 0.1.0 because -alpha tag is forbidden

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "file-template-manager",
   "displayName": "file-template-manager",
   "description": "File template management",
-  "version": "1.0.0-alpha.0",
+  "version": "0.1.0",
   "publisher": "gautier-lfbvr",
   "homepage": "https://github.com/gautier-lefebvre/vscode-file-template-manager#readme",
   "repository": {
