--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "compile": "webpack --mode development",
     "test-compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
-    "watch": "webpack --mode development --watch",
+    "watch": "webpack --mode development --watch --info-verbosity verbose",
     "pretest": "yarn run compile && yarn run lint",
     "test": "node ./out/test/runTest.js"
   },
